--- a/config.json
+++ b/config.json
@@ -132,12 +132,12 @@
         ],
         "favoritos":[
             {
-                "nome": "Mario",
+                "title": "Mario",
                 "url": "https://www.youtube.com/c/DevSoutinho",
                 "imagemPerfil": "https://img.youtube.com/vi/0JWMVc1CqpA/hqdefault.jpg"
             },
             {
-                "nome": "peas",
+                "title": "peas",
                 "url": "https://www.youtube.com/c/DevSoutinho",
                 "imagemPerfil": "https://img.youtube.com/vi/0JWMVc1CqpA/hqdefault.jpg"
             }
